Changelog
=========


1.0a9
-----

* Issue #934 Fehler bei den Falldossiers 1 und 2 BD.ARP
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/934/
  Added icons for custom dossier portal types
  [lgraf]

* Hide breadcrumbs on login page so it doesn't obstruct site title
  [lukasg]


1.0a8
-----
* W3C compatiblity for fontsize switch
  [fsprenger]

* Added a customized version of formUnload.js due to IEs problem with 
  the variable name 'form'
  [fsprenger]
  
* Corrected wizard tab text indent
  [fsprenger]

* Added margin to form controls 
  [fsprenger]
  
* Reactivated the custom code for breadcrumbs; if the current user has no 
  rights to view an item, it is not clickable
  [fsprenger]
  
* Using the same styles on treeitems without a link as with normal treeitems
  [fsprenger]
  
* Styling: Added new active button ("assign")
  [phabegger]


1.0a7
-----

* Margin for navigation items
  [fsprenger]

* Fixed menu position for IE8
  [fsprenger]

* Bigger small font size
  [fsprenger]

* Added iZug logo
  [fsprenger]

* Issue #873 Anzeige Menuebaum eingerueckt angezeigt
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/873
  [fsprenger]

* Fixed searchbox
  [fsprenger]

* Issue #865 Styling-Anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/865
  Added styling for selected button ids.
  [fsprenger]


1.0a6
-----

* fixed image url
  [fsprenger]


1.0a5
-----

* several style fixes
  [fsprenger]

* added icons for several workflowstates
  [fsprenger]

* enabled caching for column width scripts when used outside of opengever
  [fsprenger]

* fixed overdue icon
  [fsprenger]

* fix for ie
  [fsprenger]


1.0a4
-----

* Various improvements for styling in IE
  [fsprenger]

* Various CSS improvements
  [fsprenger]


* OpenGever task response listing: make label big enough for the longer
  label texts such as "Responsible client"
  [jbaumann]
