@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+  <stylesheet title="" cacheable="True" compression="safe"
+     conditionalcomment="" cookable="True" enabled="on" expression=""
+     id="plone3compatibility.css" media="screen" rel="stylesheet" rendering="import"/>
+</object>
