@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<object name="portal_skins" allow_any="False" cookie_persistence="False"
+   default_skin="iZug Base Theme">
+
+ <object name="izug_plone3"
+    meta_type="Filesystem Directory View"
+    directory="izug.basetheme:skins/izug_plone3"/>
+
+ <!-- for some reason skin settings from default profile are loaded first,
+      so we have to make sure izug_plone3 folder is on top of the list -->
+ <skin-path name="iZug Base Theme" based-on="Plone Classic Theme">
+  <layer name="izug_plone3"
+     insert-before="custom"/>
+ </skin-path>
+
+</object>
