@@ -184,6 +184,7 @@ h3, h4, h5, h6 {
     padding: 1em 0 0.3em 0;
     border-top: 0.2em &dtml-borderStyle; &dtml-zugblue;;
     overflow: hidden;
+    text-indent: 0;
 }
 #portal-siteactions li {
     display: inline;
