@@ -1,0 +1,207 @@
+<metal:page define-macro="master">
+<metal:block define-slot="top_slot" />
+
+<tal:doctype tal:replace="structure string:&lt;!DOCTYPE html PUBLIC
+  &quot;-//W3C//DTD XHTML 1.0 Transitional//EN&quot;
+  &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&quot;&gt;" />
+<metal:block use-macro="here/global_defines/macros/defines" />
+
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xml:lang="en"
+      lang="en"
+      tal:define="lang language"
+      tal:attributes="lang lang;
+                      xml:lang lang">
+
+  <tal:cache tal:define="charset site_properties/default_charset|string:utf-8">
+    <metal:cache use-macro="here/global_cache_settings/macros/cacheheaders">
+      Get the global cache headers located in global_cache_settings.
+    </metal:cache>
+  </tal:cache>
+
+  <head>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"
+          tal:define="charset site_properties/default_charset|string:utf-8"
+          tal:attributes="content string:text/html;;charset=${charset}" />
+
+    <meta name="generator" content="Plone - http://plone.org" />
+
+    <!-- Internet Explorer fix, forces IE8 into newest possible rendering
+         engine even if it's on an intranet. This has to be defined before any
+         script/style tags. -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+
+    <metal:baseslot define-slot="base">
+      <base tal:attributes="href here/renderBase" /><!--[if lt IE 7]></base><![endif]-->
+    </metal:baseslot>
+
+    <div tal:replace="structure provider:plone.htmlhead" />
+
+    <!-- IE6 workaround CSS/JS  -->
+    <tal:iefixstart replace="structure string:&lt;!--[if lte IE 7]&gt;" />
+        <style type="text/css" media="all" tal:condition="exists: portal/IEFixes.css"
+               tal:content="string:@import url($portal_url/IEFixes.css);">
+        </style>
+        
+        <script type="text/javascript"
+                tal:attributes="src string:${portal_url}/iefixes.js">
+        </script>
+    <tal:iefixend replace="structure string:&lt;![endif]--&gt;" />
+
+    <meta tal:define="metatags python:putils.listMetaTags(here).items()"
+          tal:condition="metatags"
+          tal:repeat="keyval metatags"
+          tal:attributes="name python:keyval[0];
+                          content python:keyval[1];" />
+
+    <link tal:replace="structure provider:plone.htmlhead.links" />
+
+    <!-- Disable IE6 image toolbar -->
+    <meta http-equiv="imagetoolbar" content="no" />
+    
+    <tal:comment replace="nothing"> A slot where you can insert elements in the header from a template </tal:comment>
+    <metal:headslot define-slot="head_slot" />
+
+    <tal:comment replace="nothing"> A slot where you can insert CSS in the header from a template </tal:comment>
+    <metal:styleslot define-slot="style_slot" />
+
+    <tal:comment replace="nothing"> This is deprecated, please use style_slot instead. </tal:comment>
+    <metal:cssslot define-slot="css_slot" />
+
+    <tal:comment replace="nothing"> A slot where you can insert javascript in the header from a template </tal:comment>
+    <metal:javascriptslot define-slot="javascript_head_slot" />
+    <!-- columns sizes -->
+    <style type="text/css" tal:content="structure string:
+    div#portal-column-one {
+        width: ${context/getLeftColumnWidth};
+    }
+    div#portal-column-content.sl {
+        margin-left: -${context/getContentColumnWidth};
+        width: ${context/getContentColumnWidth};
+    ">
+    </style>
+  </head>
+
+  <body tal:define="template_id python:template.id or path('view/__name__');
+                    sl python:plone_view.have_portlets('plone.leftcolumn', view);
+                    sr python:plone_view.have_portlets('plone.rightcolumn', view);
+                    class_expr string:${context/getSectionFromURL} template-${template_id};"
+        tal:attributes="class python:class_expr.strip();
+                        dir python:test(isRTL, 'rtl', 'ltr')">
+    <div id="visual-portal-wrapper">
+
+      <div id="portal-top" i18n:domain="plone">
+        <div tal:replace="structure provider:plone.portaltop" />
+      </div>
+
+      <div class="visualClear" id="clear-space-before-wrapper-table"><!-- --></div>
+
+      <div id="portal-columns">
+         <tal:comment replace="nothing"> Start of the left column </tal:comment>
+         <div id="portal-column-one"
+             metal:define-slot="column_one_slot"
+             tal:condition="sl">
+           <div class="visualPadding">
+             <metal:portlets define-slot="portlets_one_slot">
+               <tal:block replace="structure provider:plone.leftcolumn" />
+             </metal:portlets>
+             &nbsp;
+           </div>
+         </div>
+         <tal:comment replace="nothing"> End of the left column </tal:comment>
+         
+         <tal:comment replace="nothing"> Start of main content block </tal:comment>
+         <div id="portal-column-content"
+             tal:define="tabindex python:Iterator(mainSlot=False)"
+             tal:attributes="class python:(sl and sr and 'sl sr') or (sl and 'sl') or (sr and 'sr') or ''">
+         
+           <metal:block define-slot="content">
+             <div metal:define-macro="content"
+                  tal:define="show_border context/@@plone/showEditableBorder"
+                  tal:attributes="class python:test(show_border,'documentEditable','')">
+         
+               <div tal:replace="structure provider:plone.contentviews" />
+         
+               <div id="region-content"
+                    class="documentContent">
+         
+                 <span id="contentTopLeft"></span>
+                 <span id="contentTopRight"></span>
+                 
+                 <a name="documentContent"></a>
+         
+                 <div metal:use-macro="here/global_statusmessage/macros/portal_message">
+                   Portal status message
+                 </div>
+                 
+                 <div id="viewlet-above-content" tal:content="structure provider:plone.abovecontent" />
+         
+                 <metal:slot metal:define-slot="body">
+                 <div id="content">
+                   <metal:header metal:define-slot="header" tal:content="nothing">
+                     Visual Header
+                   </metal:header>
+                   <metal:bodytext metal:define-slot="main" tal:content="nothing">
+                     Page body text
+                   </metal:bodytext>
+                 </div>
+                 </metal:slot>
+         
+                 <metal:sub metal:define-slot="sub">
+                 
+                   <div tal:replace="structure provider:plone.belowcontent" />
+                 
+                 </metal:sub>
+         
+                 <span id="contentBottomLeft"></span>
+                 <span id="contentBottomRight"></span>
+         
+               </div>
+         
+             </div>
+         
+           </metal:block>
+         </div>
+         <tal:comment replace="nothing"> End of main content block </tal:comment>
+         
+         <tal:comment replace="nothing"> Start of right column </tal:comment>
+         <div id="portal-column-two"
+             metal:define-slot="column_two_slot"
+             tal:condition="sr">
+           <div class="visualPadding">
+             <metal:portlets define-slot="portlets_two_slot">
+               <tal:block replace="structure provider:plone.rightcolumn" />
+             </metal:portlets>
+             &nbsp;
+           </div>
+         </div>
+         <tal:comment replace="nothing"> End of the right column </tal:comment>
+      </div>
+      <tal:comment replace="nothing"> end column wrapper </tal:comment>
+
+      <div class="visualClear" id="clear-space-before-footer"><!-- --></div>
+      
+      <div tal:define="context_state context/@@plone_context_state;
+                        portlet_assignable context_state/portlet_assignable"
+            tal:condition="python:not sl and not sr and portlet_assignable and checkPermission('Portlets: Manage portlets', context)">
+          <a class="managePortletsFallback"
+             tal:attributes="href string:${context_state/canonical_object_url}/@@manage-portlets"
+             i18n:domain="plone"
+             i18n:translate="manage_portlets_link">
+             Manage portlets
+          </a>
+      </div>
+
+      <metal:block i18n:domain="plone">
+
+        <div tal:replace="structure provider:plone.portalfooter" />
+
+      </metal:block>
+
+      <div class="visualClear"><!-- --></div>
+    </div>
+<div id="kss-spinner"><img tal:attributes="src string:${portal_url}/spinner.gif" alt="" /></div>
+</body>
+</html>
+</metal:page>
