@@ -1,0 +1,62 @@
+#edit-bar {
+    display: none;
+}
+
+/* In the control panel the edit bar has to be visible otherwise some features
+are not accessible. Another design flaw of our 'usability improvement'. */
+body.template-user-information #edit-bar,
+body.template-atct_manageTopicIndex #edit-bar,
+body.template-usergroup-userprefs #edit-bar,
+body.template-usergroup-groupprefs #edit-bar,
+body.template-usergroup-controlpanel #edit-bar,
+body.template-member-registration #edit-bar {
+    display: block !important;
+}
+#ftw-edit-bar {
+    background-color: #75ad0a;
+    border: 0.25em solid #75ad0a;
+    min-height: 2em;
+    display: block;
+    border-style: solid solid none solid; 
+    margin-left: 0;
+    margin-bottom: 1em;
+    border-top-right-radius: 0.5em;
+    border-top-left-radius: 0.5em;
+    -webkit-border-top-right-radius: 0.5em;
+    -webkit-border-top-left-radius: 0.5em;
+    -moz-border-radius-topleft: 0.5em;
+    -moz-border-radius-topright: 0.5em;
+}
+#ftw-edit-bar ul {
+    margin: 0;
+    list-style-type: none;
+}
+#ftw-edit-bar dl {
+    margin-bottom: 0;
+}
+#ftw-edit-bar a:link,
+#ftw-edit-bar a:visited {
+    border-bottom: none;
+    color: white;
+}
+#ftw-edit-bar dl.actionMenu.deactivated dt {
+    margin: 0 0.25em;
+}
+#content-views li {
+    display: inline;
+}
+#content-views li a:hover {
+    color: black !important;
+}
+#contentActionMenus li {
+    display: inline;
+}
+#contentActionMenus dt a:hover {
+    color: white !important;
+}
+
+#portal-siteactions,
+.to_top,
+#portal-breadcrumbs {
+    font-size: 0.909em;
+}
