@@ -31,6 +31,7 @@ setup(name='izug.basetheme',
       zip_safe=False,
       install_requires=[
         'setuptools',
+        'plonetheme.classic',
         'collective.js.jqueryui',
         'ftw.contentmenu',
         'z3c.jbot',
